bugs e tamanho das colunas

--- a/PI - Contador.csproj
+++ b/PI - Contador.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <RootNamespace>PI___Vini_beta_login</RootNamespace>
+    <RootNamespace>PI---Contador</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
